[project]
name = "multidoc-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "pypdf>=6.1.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
